--- a/src/Components/ImageGenerator/ImageGenerator.css
+++ b/src/Components/ImageGenerator/ImageGenerator.css
@@ -51,7 +51,8 @@
      padding: 2vh;
     border-radius: 20px;
     border: 2px solid rgb(204, 20, 50);;
-    width: 12%;
+    min-width: 120px;  
+  width: auto;
     background-color: black;
     color:rgb(204, 20, 50);;
     font-size: 1.2rem;
