--- a/src/Components/ImageGenerator/ImageGenerator.css
+++ b/src/Components/ImageGenerator/ImageGenerator.css
@@ -8,7 +8,7 @@
 }
 .header{
     width: 80%;
-    margin: auto;
+    margin:2vh auto;
     font-size: 3rem;
     font-weight: bold;
     display: flex;
@@ -17,7 +17,8 @@
     justify-content: center;
 }
 .header p{
-    width: 100%;
+    padding-top: 5vh;
+
 }
 .header span{
     color: rgb(204, 20, 50);
@@ -35,7 +36,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3vh 0 5vh 0;
+    margin: 3vh 0;
+    padding-bottom: 5vh ;
 }
 .srchbox input{
     padding: 2vh;
@@ -51,7 +53,7 @@
      padding: 2vh;
     border-radius: 20px;
     border: 2px solid rgb(204, 20, 50);;
-    min-width: 200px;  
+    min-width: 120px;  
   width: auto;
     background-color: black;
     color:rgb(204, 20, 50);;
@@ -102,12 +104,8 @@
         width:100% ;
     }
 }
-@media (max-width:1250px){
-    .srchbox button{
-   
-    width: 10%;
-}
-}
+
+
 @media (max-width:1050px){
    .srchbox input{
     
@@ -115,7 +113,7 @@
   
 }
 .image img{
-    width: 35%;
+    width: 40%;
     margin:2vh  auto;
 }
 }
@@ -126,31 +124,19 @@
   
 }
 .image img{
-    width: 40%;
+    width: 45%;
     margin:2vh  auto;
 }
-  .srchbox button{
-   
-    width: 13%;
-}
+  
 .header{
     font-size: 2.5rem;
 }
 
 }
-@media(max-width:800px){
-    .srchbox button{
- 
-  width: 15%;
-}
-}
+
 @media(max-width:685px){
-    .srchbox button{
- 
-  width: 20%;
-}
 .image img{
-    width: 45%;
+    width: 50%;
     margin:3vh  auto;
 }
 }
